jlatexmath (0.9.2)
	* Handle vertical and horizontal lines in array environment

	* Fix bug in the render of (over|under)braces
	
	* Fix bug with A{\scriptstyle BCD}E

	* Fix bug with \left(A\leftarrow B\right)

	* Fix bug with option *{20}c in array env.

	* An argument beginning with \left must be closed by \right (thanks to Juan Enrique)

	* Fix bug with \over (http://bugzilla.scilab.org/show_bug.cgi?id=7226)
	
        * Improve the render of a cfrac (thanks to Juan Enrique)

	* Improve the way to get the arguments of a macro (thanks to Juan Enrique)
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

        * Add cfrac macro

	* Possibility to have empty columns in array
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

jlatexmath (0.9.1)
	* Few modifications in fop-plugin and improve \includegraphics
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

	* Moved fop.properties at the root directory (this is only needed to
	build and run fop plugin)

	* examples/Export/build.xml uses fop.properties

 -- Sylvestre Ledru <sylvestre.ledru@scilab.org> Tue, 16 Feb 2010 10:51:04 +0100

jlatexmath (0.9) 
	 * Avoid two generations of labels with fop.
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Fri, 12 Feb 2010 18:23:56 +0100

jlatexmath (0.8.9) 
	 * Add new environments of amsmath : gather, flalign, alignat...
	 
	 * Add commands genfrac, rule, underscore, hdotsfor, multicolumn, ...
	 
	 * Add commands \textsuperscript et \textsubscript
	 
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Thu, 11 Feb 2010 15:32:27 +0100

jlatexmath (0.8.7)
	 * Add the command \prescript

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Mon, 11 Jan 2010 19:07:18 +0100

	 * Add the commands \mathclap, \mathrlap, \mathllap, \clap, \rlap and \llap

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Mon, 11 Jan 2010 16:29:51 +0100
	   
  	 * A basic (without options) \includegraphics command added
