@@ -1,4 +1,6 @@
 jlatexmath (0.9.2)
+        * add new commands \tiny, \footnotesize,... and \overwithdelims,...
+
 	* Handle vertical and horizontal lines in array environment
 
 	* Fix bug in the render of (over|under)braces
